# structure_learning

./: .gitignore  CHANGELOG  LICENSE  README.md  conda_environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt
OSEM/: Structure learning with ordinal simulated data.Rmd
ablation/: ablation_BiDAG.ipynb  ablation_partition_mcmc.ipynb  summary.npz
ablation/results/: ablation_nodes=3_edgep=0.25_r=0.npz  ablation_nodes=3_edgep=0.25_r=1.npz  ablation_nodes=3_edgep=0.25_r=10.npz  ablation_nodes=3_edgep=0.25_r=100.npz  ablation_nodes=3_edgep=0.25_r=101.npz  ablation_nodes=3_edgep=0.25_r=102.npz  ablation_nodes=3_edgep=0.25_r=103.npz  ablation_nodes=3_edgep=0.25_r=104.npz  ablation_nodes=3_edgep=0.25_r=105.npz  ablation_nodes=3_edgep=0.25_r=106.npz  (+1756 more)
docs/: classes.dot  classes.html  index.html  mcmc.data.html  mcmc.data.synthetic.html  mcmc.data_structures.html  mcmc.data_structures.partition.html  mcmc.evaluation.html  mcmc.evaluation.metrics.html  mcmc.evaluation.tests.html  mcmc.html  mcmc.mcmc.html  mcmc.mcmc.mcmc.html  mcmc.mcmc.partition_mcmc.html  mcmc.mcmc.structure_mcmc.html  mcmc.proposals.graph.graph_proposal.html  mcmc.proposals.graph.html  mcmc.proposals.html  mcmc.proposals.partition.html  mcmc.proposals.partition.partition_proposal.html  mcmc.proposals.proposal.html  mcmc.scores.bd.html  mcmc.scores.bdeu.html  mcmc.scores.bge.html  mcmc.scores.html  mcmc.scores.marginal.html  mcmc.scores.score.html  mcmc.tests.html  mcmc.tests.test_simulation_structure_mcmc_synthetic.html  mcmc.utils.graph_utils.html  mcmc.utils.html  mcmc.utils.partition_utils.html  mcmc.utils.score_utils.html  mcmc_private.html  packages.dot  packages.html  structure_learning.approximators.approximator.html  structure_learning.approximators.dibs.html  structure_learning.approximators.greedy.html  structure_learning.approximators.hillclimb.html  (+59 more)
evaluation/: metrics.py
examples/: BGe_prior_hyperparameter_testing.ipynb  causal_effects.ipynb  demo_structure_mcmc.py  experiment.ipynb  iSCM_data_test.ipynb  om_partition_MCMC_reanalyze_with_js_div.py  om_partition_mcmc.py  om_structure_learning.py  om_structure_learning_reanalyze_with_w_distance.py  optimal_mapping_partition_mcmc.ipynb  optimal_mapping_structure_learning.ipynb  partition_mcmc.ipynb  partition_mcmc_bde.ipynb  partition_mcmc_opad.ipynb  partition_mcmc_opad_cpdag.ipynb  running_mcmc_experiments.ipynb  standardised_data_test.ipynb  structure_mcmc.ipynb  test_structure_mcmc.ipynb
mcmc/: structure_mcmc.py
scores/: bdeu.py  bge.py
src/mcmc/data/: __init__.py  (+3 more)
tests/: test_simulation_structure_mcmc_synthetic.py
utils/: score_utils.py
(+2197 files in other folders)
