[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "structure_learning"
version = "0.2.1"
description = "MCMC for graph structure learning in Bayesian networks."
requires-python = ">= 3.8"
dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "scikit-learn",
  "matplotlib",
  "networkx",
  "igraph",
  "seaborn",
  "torch",
  "pcalg",
  "conditional_independence",
  "xlrd"
]
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Kristofer Delas Peñas", email = "kristofer.delaspenas@uts.edu.au"},
    {name = "Roman Marchant", email = "roman.marchant@uts.edu.au"},
    {name = "Catarina Pinto Moreira"}
]
