[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "structure_learning"
version = "1.0.0"
description = "Structure learning algorithms for Bayesian networks."
requires-python = ">= 3.10"
dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "scikit-learn",
  "matplotlib",
  "mlflow",
  "networkx",
  "igraph",
  "seaborn",
  "torch",
  "conditional_independence",
  "graphical_models",
  "pgmpy",
  "compress_pickle"
]
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Kristofer Delas Peñas", email = "kristofer.delaspenas@uts.edu.au"},
    {name = "Roman Marchant", email = "roman.marchant@uts.edu.au"},
    {name = "Catarina Pinto Moreira"}
]
